Last step of welcome page

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +36,7 @@
                 <a href="#"><button id="startBtn">Start Now</button></a>
             </div>
             <div class="image">
-                <button id="imageLeftSlideBtn"><img src="../../Assets/images/arrow-left-solid.svg" alt=""></button>
+                <button id="imageLeftSlideBtn"><img src="../../Assets/svg/arrow-left-solid.svg" alt=""></button>
                 <div class="imageList">
                     <img src="../../Assets/images/heroResumeImg1.jpg" alt="Resume Image" class="img active">
                     <img src="../../Assets/images/heroResumeImg2.jpg" alt="Resume Image" class="img">
@@ -43,14 +44,14 @@
                     <img src="../../Assets/images/heroResumeImg4.jpg" alt="Resume Image" class="img">
                     <img src="../../Assets/images/heroResumeImg5.jpg" alt="Resume Image" class="img">
                 </div>
-                <button id="imageRightSlideBtn"><img src="../../Assets/images/arrow-right-solid.svg" alt=""></button>
+                <button id="imageRightSlideBtn"><img src="../../Assets/svg/arrow-right-solid.svg" alt=""></button>
             </div>
         </div>
     </div>
     <div class="main">
         <div class="sectionOne">
             <div class="imageContent">
-                <h1>How to use Resume Builder ?</h1>
+                <h1>How to <span>use</span> Resume Builder ?</h1>
                 <div class="cardList">
                     <div class="cardContent">
                         <div class="card">
@@ -73,12 +74,63 @@
                         <h3>Ready To Download</h3>
                     </div>
                 </div>
+                <a href="#"><button id="sectionOneBtn">Build Now !</button></a>
             </div>
-            <h3>Hover On Cards To Know More !</h3>
         </div>
+
         <div class="sectionTwo">
-            
+            <div class="sectionTwoImg">
+                <img src="../../Assets/svg/undraw_stand_out_-1-oag.svg" alt="">
+            </div>
+            <div class="sectionTwoContent">
+                <h1>Stand out form the croud, be <span>yourself</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, officiis sunt error numquam laborum
+                    harum non sint, adipisci dignissimos libero, minima reprehenderit illum temporibus sit.</p>
+            </div>
         </div>
+
+        <div class="sectionThree">
+            <h1>Get something <span>extra</span></h1>
+            <div class="packages">
+                <div class="basicPakage">
+                    <img src="../../Assets/svg/arrow-right-solid.svg" alt="" id="arrowRight">
+                    <h2>Basic</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus quaerat laborum doloremque libero est blanditiis consectetur rerum! Dolores quis ipsum voluptate sint dolore quia esse recusandae labore inventore pariatur?</p>
+                    <h5>In Basic You Will Get</h5>
+                    <ul>
+                        <li><img src="../../Assets/svg/success.svg" /> Limited Templates</li>
+                        <li><img src="../../Assets/svg/delete.svg" />Community Suppot</li>
+                        <li><img src="../../Assets/svg/delete.svg" />Account Maintain</li>
+                        <li><img src="../../Assets/svg/success.svg" />New Updates</li>
+                    </ul>
+                    <a href="#"><button>Get Basic</button></a>
+                </div>
+                <div class="primiumPakage">
+                    <img src="../../Assets/svg/arrow-left-solid.svg" alt="" id="arrowLeft">
+                    <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora quaerat sed repellat minus, nulla tenetur</p>
+                    <h5>In Primium You Will Get</h5>
+                    <ul>
+                        <li><img src="../../Assets/svg/success.svg" />Unimited Templates</li>
+                        <li><img src="../../Assets/svg/success.svg" />Community Suppot</li>
+                        <li><img src="../../Assets/svg/success.svg" />Account Maintain</li>
+                        <li><img src="../../Assets/svg/success.svg" />New Updates</li>
+                    </ul>
+                    <a href="#"><button>Get Primium</button></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="links">
+            <ul>
+                <h1>Work</h1>
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+            </ul>
+        </div>
+        <p>&copy; All rihgts reserved</p>
     </div>
     <script src="app.js"></script>
 </body>
