--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -10,7 +10,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>CV</title>
+    <title>CV - Home</title>
 </head>
 
 <body>
@@ -20,11 +20,11 @@
             <div class="links">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../other/aboutUs/index.html">About</a></li>
+                    <li><a href="../other/contactUs/index.html">Contact</a></li>
                 </ul>
             </div>
-            <div class="enterBtn"><a href="#"><button>Sign Up</button></a></div>
+            <div class="enterBtn"><a href="../accounts/signup/index.html"><button>Sign Up</button></a></div>
         </nav>
         <div class="container">
             <div class="content">
@@ -33,7 +33,7 @@
                     assumenda animi officia odio. Incidunt, consectetur. Ipsum, optio doloremque magnam distinctio
                     doloribus possimus corporis illo ratione alias recusandae qui mollitia in quos quidem velit ea
                     tempore rerum minima quae? Facilis accusantium laborum voluptatem modi expedita! Laudantium.</p>
-                <a href="#"><button id="startBtn">Start Now</button></a>
+                <a href="../accounts/signup/index.html"><button id="startBtn">Start Now</button></a>
             </div>
             <div class="image">
                 <button id="imageLeftSlideBtn"><img src="../../Assets/svg/arrow-left-solid.svg" alt=""></button>
@@ -74,7 +74,7 @@
                         <h3>Ready To Download</h3>
                     </div>
                 </div>
-                <a href="#"><button id="sectionOneBtn">Build Now !</button></a>
+                <a href="../Use/index.html"><button id="sectionOneBtn">Learn More !</button></a>
             </div>
         </div>
 
@@ -95,42 +95,81 @@
                 <div class="basicPakage">
                     <img src="../../Assets/svg/arrow-right-solid.svg" alt="" id="arrowRight">
                     <h2>Basic</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus quaerat laborum doloremque libero est blanditiis consectetur rerum! Dolores quis ipsum voluptate sint dolore quia esse recusandae labore inventore pariatur?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus quaerat laborum doloremque
+                        libero est blanditiis consectetur rerum! Dolores quis ipsum voluptate sint dolore quia esse
+                        recusandae labore inventore pariatur?</p>
                     <h5>In Basic You Will Get</h5>
                     <ul>
                         <li><img src="../../Assets/svg/success.svg" /> Limited Templates</li>
-                        <li><img src="../../Assets/svg/delete.svg" />Community Suppot</li>
+                        <li><img src="../../Assets/svg/delete.svg" />Community Support</li>
                         <li><img src="../../Assets/svg/delete.svg" />Account Maintain</li>
                         <li><img src="../../Assets/svg/success.svg" />New Updates</li>
                     </ul>
-                    <a href="#"><button>Get Basic</button></a>
+                    <a href="../accounts/signup/index.html"><button>Get Basic</button></a>
                 </div>
                 <div class="primiumPakage">
                     <img src="../../Assets/svg/arrow-left-solid.svg" alt="" id="arrowLeft">
                     <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora quaerat sed repellat minus, nulla tenetur</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora
+                        quaerat sed repellat minus, nulla tenetur</p>
                     <h5>In Primium You Will Get</h5>
                     <ul>
                         <li><img src="../../Assets/svg/success.svg" />Unimited Templates</li>
-                        <li><img src="../../Assets/svg/success.svg" />Community Suppot</li>
+                        <li><img src="../../Assets/svg/success.svg" />Community Support</li>
                         <li><img src="../../Assets/svg/success.svg" />Account Maintain</li>
                         <li><img src="../../Assets/svg/success.svg" />New Updates</li>
                     </ul>
-                    <a href="#"><button>Get Primium</button></a>
+                    <a href="../accounts/signup/index.html"><button>Get Primium</button></a>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
-        <div class="links">
-            <ul>
-                <h1>Work</h1>
-                <li>one</li>
-                <li>two</li>
-                <li>three</li>
-            </ul>
+        <div class="fotterInfo">
+            <div>
+                <img src="../../Assets/svg/paper-plane-solid.svg" alt="">
+                <p>India</p>
+            </div>
+            <div>
+                <img src="../../Assets/svg/language-solid.svg" alt="">
+                <p>English</p>
+            </div>
         </div>
-        <p>&copy; All rihgts reserved</p>
+        <div class="footerLinks">
+            <div>
+                <h3>Company</h3>
+                <ul>
+                    <a href="../other/aboutUs/index.html">
+                        <li>About</li>
+                    </a><a href="#">
+                        <li>FAQ</li>
+                    </a><a href="../accounts/signup/index.html">
+                        <li>Primium</li>
+                    </a>
+                </ul>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <ul>
+                    <a href="#"><li>Send Feedback</li></a>
+                    <a href="#"><li>Students Offer</li></a>
+                </ul>
+            </div>
+        </div>
+        <div class="mediaLinks">
+            <h3>Follow us :</h3>
+            <div class="mediaImg">
+                <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt=""></a>
+                <a href="#"><img src="../../Assets/svg/github.svg" alt=""></a>
+                <a href="#"><img src="../../Assets/svg/mail.svg" alt=""></a>
+            </div>
+            <hr>
+            <div id="copyright" style="margin-top: 20px;">
+                <p>    
+                    &copy; Builder.io 2023.
+                </p>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
