use page is ready

--- a/src/Use/index.html
+++ b/src/Use/index.html
@@ -27,7 +27,102 @@
         </nav>
     </div>
     <div class="main">
-        <h2>Use</h2>
+        <div class="section section1">
+            <div class="content">
+                <h1 id="verText">Step 1</h1>
+                <div>
+                    <h2>Create an Account</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non praesentium consectetur, possimus voluptates, culpa sequi repellendus unde inventore blanditiis sunt aliquam rem, eaque ab optio nos
+                trum repudiandae! Reiciendis quam, volupta</p></div>
+            </div>
+            <div class="image">
+                <img src="../../Assets/svg/undraw_access_account_re_8spm.svg" alt="an image for understading">
+            </div>
+        </div>
+        <div class="section section2">
+            <div class="image">
+                <img src="../../Assets/svg/undraw_reviewed_docs_re_9lmr.svg" alt="an image for understading">
+            </div>
+            <div class="content">
+                <h1 id="verText">Step 2</h1>
+                <div>
+                    <h2>Choose Template</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, cupiditate.</p>
+                </div> 
+            </div>
+        </div>
+        <div class="section section3">
+            <div class="content">
+                <h1 id="verText">Step 3</h1>
+                <div>
+                    <h2>Fill the Blanks</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugiat porro quae. Et quia nisi nesciunt autem aspernatur id adipisci?</p>
+                </div> 
+            </div>
+            <div class="image">
+                <img src="../../Assets/svg/undraw_fill_form_re_cwyf.svg" alt="an image for understading">
+            </div>
+        </div>
+        <div class="section section4">
+            <div class="image">
+                <img src="../../Assets/svg/undraw_download_re_li50.svg" alt="an image for understading">
+            </div>
+            <div class="content">
+                <h1 id="verText">Step 4</h1>
+                <div>
+                    <h2>Ready to Download</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur deserunt reiciendis corrupti quod placeat, iste voluptas ex doloremque?</p>
+                </div> 
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="fotterInfo">
+            <div>
+                <img src="../../Assets/svg/paper-plane-solid.svg" alt="">
+                <p>India</p>
+            </div>
+            <div>
+                <img src="../../Assets/svg/language-solid.svg" alt="">
+                <p>English</p>
+            </div>
+        </div>
+        <div class="footerLinks">
+            <div>
+                <h3>Company</h3>
+                <ul>
+                    <a href="../other/aboutUs/index.html">
+                        <li>About</li>
+                    </a><a href="#">
+                        <li>FAQ</li>
+                    </a><a href="../accounts/signup/index.html">
+                        <li>Primium</li>
+                    </a>
+                </ul>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <ul>
+                    <a href="#"><li>Send Feedback</li></a>
+                    <a href="#"><li>Students Offer</li></a>
+                </ul>
+            </div>
+        </div>
+        <div class="mediaLinks">
+            <h3>Follow us :</h3>
+            <div class="mediaImg">
+                <a href="#"><img src="../../Assets/svg/linkedin (1).svg" alt=""></a>
+                <a href="#"><img src="../../Assets/svg/github.svg" alt=""></a>
+                <a href="#"><img src="../../Assets/svg/mail.svg" alt=""></a>
+            </div>
+            <hr>
+            <div id="copyright" style="margin-top: 20px;">
+                <p>    
+                    &copy; Builder.io 2023.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
