Getting ready the resume builder

--- a/src/Use/index.html
+++ b/src/Use/index.html
@@ -104,7 +104,7 @@
             <div>
                 <h3>Support</h3>
                 <ul>
-                    <a href="#"><li>Send Feedback</li></a>
+                    <a href="../other/contactUs/index.html"><li>Send Feedback</li></a>
                     <a href="#"><li>Students Offer</li></a>
                 </ul>
             </div>
