--- a/src/other/contactUs/index.html
+++ b/src/other/contactUs/index.html
@@ -27,7 +27,67 @@
         </nav>
     </div>
     <div class="main">
-        <h2>Contact Us 📱</h2>
+        <div class="container">
+            <div class="image">
+                <img src="../../../Assets/svg/undraw_feedback_re_urmj.svg" alt="">
+            </div>
+            <div class="form">
+                <form action="#">
+                    <input type="text" name="subject" id="subject" placeholder="Enter the Subject">
+                    <input type="text" name="userName" id="userName" placeholder="Enter Full Name">
+                    <input type="email" name="email" id="email" placeholder="Enter Email Id">
+                    <textarea name="query" id="query" cols="30" rows="5" placeholder="Tell us, how we can help you ?"></textarea>
+                    <input type="submit" id="contact_btn" value="Send">
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="fotterInfo">
+            <div>
+                <img src="../../../Assets/svg/paper-plane-solid.svg" alt="">
+                <p>India</p>
+            </div>
+            <div>
+                <img src="../../../Assets/svg/language-solid.svg" alt="">
+                <p>English</p>
+            </div>
+        </div>
+        <div class="footerLinks">
+            <div>
+                <h3>Company</h3>
+                <ul>
+                    <a href="../aboutUs/index.html">
+                        <li>About</li>
+                    </a><a href="#">
+                        <li>FAQ</li>
+                    </a><a href="../../accounts/signup/index.html">
+                        <li>Primium</li>
+                    </a>
+                </ul>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <ul>
+                    <a href="#"><li>Send Feedback</li></a>
+                    <a href="#"><li>Students Offer</li></a>
+                </ul>
+            </div>
+        </div>
+        <div class="mediaLinks">
+            <h3>Follow us :</h3>
+            <div class="mediaImg">
+                <a href="#"><img src="../../../Assets/svg/linkedin (1).svg" alt=""></a>
+                <a href="#"><img src="../../../Assets/svg/github.svg" alt=""></a>
+                <a href="#"><img src="../../../Assets/svg/mail.svg" alt=""></a>
+            </div>
+            <hr>
+            <div id="copyright" style="margin-top: 20px;">
+                <p>    
+                    &copy; Builder.io 2023.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
