IN container first content p is changed

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -29,10 +29,7 @@
         <div class="container">
             <div class="content">
                 <h1>Online <span>Resume</span> Builder</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe incidunt culpa, tenetur error ad
-                    assumenda animi officia odio. Incidunt, consectetur. Ipsum, optio doloremque magnam distinctio
-                    doloribus possimus corporis illo ratione alias recusandae qui mollitia in quos quidem velit ea
-                    tempore rerum minima quae? Facilis accusantium laborum voluptatem modi expedita! Laudantium.</p>
+                <p>Abcdefghijklmnopqrstuvwxyz</p>
                 <a href="../accounts/signup/index.html"><button id="startBtn">Start Now</button></a>
             </div>
             <div class="image">
