newly added paragraphs

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -29,7 +29,9 @@
         <div class="container">
             <div class="content">
                 <h1>Online <span>Resume</span> Builder</h1>
-                <p>Abcdefghijklmnopqrstuvwxyz</p>
+                <p>A CV is the first contact you have with a prospective employer and it is your chance to make a good first impression.
+                     You use it to show your prospective employer why they should hire you and what the benefits of having you on their team will be.
+                </p>
                 <a href="../accounts/signup/index.html"><button id="startBtn">Start Now</button></a>
             </div>
             <div class="image">
@@ -81,8 +83,9 @@
             </div>
             <div class="sectionTwoContent">
                 <h1>Stand out form the croud, be <span>yourself</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, officiis sunt error numquam laborum
-                    harum non sint, adipisci dignissimos libero, minima reprehenderit illum temporibus sit.</p>
+                <p>“Find a way to differentiate yourself.” “Now there is no reason to look back at your past and to worry about, it's time to move on strongly and stand out in the crowd.”
+                     “Become so passionate and dynamic that when people meet you, you're simply unforgettable.”
+                     “Never underestimate your value and your influence."</p>
             </div>
         </div>
 
