backend folder is create"

--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -111,7 +111,7 @@
                     <img src="../../Assets/svg/arrow-left-solid.svg" alt="" id="arrowLeft">
                     <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora
-                        quaerat sed repellat minus, nulla tenetur</p>
+                        quaerat sed repellat minus, nulla tenetur<br> </p>
                     <h5>In Primium You Will Get</h5>
                     <ul>
                         <li><img src="../../Assets/svg/success.svg" />Unimited Templates</li>
