--- a/src/Use/index.html
+++ b/src/Use/index.html
@@ -32,8 +32,9 @@
                 <h1 id="verText">Step 1</h1>
                 <div>
                     <h2>Create an Account</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non praesentium consectetur, possimus voluptates, culpa sequi repellendus unde inventore blanditiis sunt aliquam rem, eaque ab optio nos
-                trum repudiandae! Reiciendis quam, volupta</p></div>
+                <p>
+                    Firstly Create an Acount by signing in.Fill your email id password and hit enter your account will be created.
+                </p></div>
             </div>
             <div class="image">
                 <img src="../../Assets/svg/undraw_access_account_re_8spm.svg" alt="an image for understading">
@@ -47,7 +48,9 @@
                 <h1 id="verText">Step 2</h1>
                 <div>
                     <h2>Choose Template</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, cupiditate.</p>
+                <p>
+                    Select a templete from.
+                </p>
                 </div> 
             </div>
         </div>
