--- a/src/welcomePage/index.html
+++ b/src/welcomePage/index.html
@@ -90,28 +90,30 @@
         </div>
 
         <div class="sectionThree">
-            <h1>Get something <span>extra</span></h1>
+            <h1>Get some <span>Extra plans</span></h1>
             <div class="packages">
                 <div class="basicPakage">
                     <img src="../../Assets/svg/arrow-right-solid.svg" alt="" id="arrowRight">
-                    <h2>Basic</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum natus quaerat laborum doloremque
-                        libero est blanditiis consectetur rerum! Dolores quis ipsum voluptate sint dolore quia esse
-                        recusandae labore inventore pariatur?</p>
-                    <h5>In Basic You Will Get</h5>
+                    <h2>Free Plans</h2>
+                    <p>
+                       Get Our free plans which includes all the core features below so you can start making it now.
+                         Continue using it for as long as you want at no cost.
+                    </p>
+                    <h5>In Free plans You Will Get</h5>
                     <ul>
                         <li><img src="../../Assets/svg/success.svg" /> Limited Templates</li>
                         <li><img src="../../Assets/svg/delete.svg" />Community Support</li>
                         <li><img src="../../Assets/svg/delete.svg" />Account Maintain</li>
                         <li><img src="../../Assets/svg/success.svg" />New Updates</li>
                     </ul>
-                    <a href="../accounts/signup/index.html"><button>Get Basic</button></a>
+                    <a href="../accounts/signup/index.html"><button>Get Free Plans</button></a>
                 </div>
                 <div class="primiumPakage">
                     <img src="../../Assets/svg/arrow-left-solid.svg" alt="" id="arrowLeft">
                     <h2>Primium <img src="../../Assets/svg/crown.svg" /></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus minima blanditiis tempora
-                        quaerat sed repellat minus, nulla tenetur</p>
+                    <p>
+                        Get Our Primium plans which includes all the core features below so you can start making it now.
+                    </p>
                     <h5>In Primium You Will Get</h5>
                     <ul>
                         <li><img src="../../Assets/svg/success.svg" />Unimited Templates</li>
