User dashboard is added to the webapp

--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="../../Assets/logo/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+    <title>CV - Dashboard</title>
 </head>
 <body>
-    <h1>kay karalay re </h1>
+    <div class="header">
+        <nav>
+            <div id="logo">cv</div>
+            <div class="UserAccount"><button>shreyash <img src="" alt=""/></button></div>
+        </nav>
+        <div class="hidden UserAccountList">
+            <div class="links">
+                <ul>
+                    <li>Account</li>
+                    <li>Edit Account</li>
+                    <li>Logout</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="left_sidebar">
+            hello
+        </div>
+        <div class="right_sidebar">
+            bye
+        </div>
+    </div>
 </body>
 </html>
